# tosutil

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  main.cpp  packages.txt
data/archs/: arm-v7.json  avr.json  xtensa-l106.json
data/boards/: blue-pill.json  stm32l053-disco.json
data/boards/arduino/: pro-mini-8.json
data/boards/nucleo/: f103rb.json
data/elf/: machine.json
data/processors/: STM32F103C8T6.json  STM32F103RB.json  atmega328p.json  esp8266.json  nRF52832.json
data/processors/STM32/: L053.json
data/programmers/: openocd.json
data/sdks/: esp-open-sdk.json
data/targets/: atmega328.json  cortex-m0plus.json  cortex-m3.json  cortex-m4f.json  xtensa-lx106.json
data/toolchains/: arm-none-eabi.json  avr-gcc.json
docs/: prog-cmd.txt
src/: CMakeLists.txt
src/include/tut/: elf.hpp  errors.hpp  loaders.hpp  location.hpp  sys_id.hpp  util.hpp
src/include/tut/install/: install.hpp
src/src/: backend_grpc.cpp  elf.cpp  json_loaders.cpp  shared.cpp  util.cpp
src/src/apps/: CMakeLists.txt  analyze.cpp  info.cpp  program.cpp
src/src/apps/analyze/: CMakeLists.txt  analyze.cpp  stack_use.hpp  su_parser.cpp
src/src/apps/install/: CMakeLists.txt  install_lin.cpp  install_lin.h  install_win.cpp  install_win.h
src/src/apps/prepare/: CMakeLists.txt  prepare.cpp  prepare.h  prepare.hpp  prepare_lin.cpp  prepare_lin.hpp  prepare_win.cpp  prepare_win.h
src/src/apps/program/: CMakeLists.txt  avrdude_program.cpp  openocd_program.cpp  program.cpp  program.hpp
src/src/apps/scan/: programmer_scan.cpp
